--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,20 +18,23 @@ name = "XP3Pack"
 path = "src/XP3Tools/xp3pack.rs"
 
 [[bin]]
-name = "XP3Unpack"
+name = "xp3unpack"
 path = "src/XP3Tools/xp3Unpack.rs"
+
+[[bin]]
+name = "test"
+path = "src/XP3Tools/test.rs"
 
 [profile.release]
 opt-level = 3
 lto = "fat"
-inline-threshold = 114514
 strip = true
 overflow-checks = false
 
 [dependencies]
-binread = "2.2.0"
-binwrite = "0.2.1"
+adler = "1.0.2"
+binrw = "0.15.0"
 clap = { version = "4.5.48", features = ["derive"] }
-flate2 = "1.1.2"
+flate2 = { version = "1.1.2", features = ["zlib"] }
 scroll = "0.13.0"
 walkdir = "2.5.0"
