--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,15 @@ authors = ["XuanRikka <xuanrikka@qq.com>"]
 license = "MIT"
 
 [[bin]]
-name = "KrKrDescrambler-rs"
+name = "krkrdescrambler"
 path = "src/KrKrDescrambler-rs/krkr_descrambler.rs"
 
 [[bin]]
-name = "KrKrScrambler-rs"
+name = "krkrscrambler"
 path = "src/KrKrDescrambler-rs/krkr_scrambler.rs"
 
 [[bin]]
-name = "XP3Pack"
+name = "xp3pack"
 path = "src/XP3Tools/xp3pack.rs"
 
 [[bin]]
@@ -32,5 +32,4 @@ adler = "1.0.2"
 binrw = "0.15.0"
 clap = { version = "4.5.48", features = ["derive"] }
 flate2 = { version = "1.1.2", features = ["zlib"] }
-scroll = "0.13.0"
 walkdir = "2.5.0"
