--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -66,7 +66,7 @@ jobs:
       run: rustup target add ${{ matrix.target }}
 
     - name: Install Cross
-      run: cargo install cross --git https://github.com/cross-rs/cross --locked
+      run: cargo install cross
 
     - name: Cache Docker layers
       uses: actions/cache@v4
