--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -77,11 +77,13 @@ jobs:
           ${{ runner.os }}-buildx-
     
     - name: Build
+      shell: bash
       run: |
-        if [[ "${{ matrix.target }}" == *"i686"* ]]; then
-          cross build --verbose --release --target ${{ matrix.target }}
+        target="${{ matrix.target }}"
+        if [[ "$target" == *"i686"* ]] && [[ "$target" != *"windows"* ]]; then
+          cross build --verbose --release --target "$target"
         else
-          cargo build --verbose --release --target ${{ matrix.target }}
+          cargo build --verbose --release --target "$target"
         fi
 
     - name: Package binary
