--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -132,6 +132,7 @@ jobs:
         Compress-Archive -Path "$distDir/*" -DestinationPath "$output" -Force
         Write-Host "Packets $output"
         Write-Host "${{ steps.meta.outputs.package_name }}-${{ matrix.target }}"
+        Write-Host "Current working directory: $($PWD.Path)"
         
     - name: Upload artifact (Unix)
       if: ${{ !contains(matrix.target, 'windows') }}
