--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -174,5 +174,5 @@ jobs:
             artifacts/*/*.tar.gz
             artifacts/*/*.zip
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
     
