--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,12 @@ jobs:
             target: i686-unknown-linux-gnu
           - os: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+          - os: ubuntu-latest
+            target: i686-unknown-linux-musl
+          - os: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-musl
           - os: macos-15-intel
             target: x86_64-apple-darwin
           - os: macos-latest
@@ -84,7 +90,8 @@ jobs:
       shell: bash
       run: |
         target="${{ matrix.target }}"
-        if [[ "$target" == *"i686"* ]] && [[ "$target" != *"windows"* ]]; then
+        if [[ "$target" != *"windows"* ]] && \
+           ( [[ "$target" == *"i686"* ]] || [[ "$target" == *"musl"* ]] ); then
           cross build --verbose --release --target "$target"
         else
           cargo build --verbose --release --target "$target"
