--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,5 +40,6 @@ panic = "abort"
 adler = "1.0.2"
 binrw = "0.15.0"
 clap = { version = "4.5.48", features = ["derive"] }
-flate2 = { version = "1.1.2", features = ["zlib-ng"] }
+flate2 = { version = "1.1.2", features = ["zlib-rs"] }
 walkdir = "2.5.0"
+zopfli = "0.8.3"
