[+]增加多输入路径的能力 [+]修复了zopfli启用时索引不适应zopfli的bug [x]增加了修改基准目录的能力以实现更灵活的打包

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,13 @@ path = "src/XP3Tools/xp3pack.rs"
 name = "xp3unpack"
 path = "src/XP3Tools/xp3unpack.rs"
 
-[[bin]]
-name = "scn-build"
-path = "src/ScnTools/scn_build.rs"
-
-[[bin]]
-name = "scn-decompile"
-path = "src/ScnTools/scn_decompile.rs"
+#[[bin]]
+#name = "scn-build"
+#path = "src/ScnTools/scn_build.rs"
+#
+#[[bin]]
+#name = "scn-decompile"
+#path = "src/ScnTools/scn_decompile.rs"
 
 [profile.release]
 opt-level = 3
